@@ -1,3 +1,8 @@
+Wed Sep 18 15:54:41 1996  Theodore Y. Ts'o  <tytso@mit.edu>
+
+	* krb_auth_su.c (krb5_get_tkt_via_passwd): Remove call to
+		krb5_os_localaddr(), since get_in_tkt will default correctly.
+
 Tue Sep 10 14:15:02 1996  Tom Yu  <tlyu@mit.edu>
 
 	* ksu.M: remove ".so man1/header.doc"
